[gd_scene load_steps=6 format=3 uid="uid://dqurhjanwhj2"]

[ext_resource type="Script" uid="uid://cfsev7oqkw2nf" path="res://Resources/Merchants/merchant_class.gd" id="1_r8t8w"]
[ext_resource type="Texture2D" uid="uid://cdr6q6ac2w38h" path="res://Resources/Art/Merchants/karver_merchant.png" id="2_msfa7"]
[ext_resource type="Script" uid="uid://cgr3u2w2wks6y" path="res://Scripts/Merchants/well_variables.gd" id="3_0sk10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36flg"]
size = Vector2(146, 180)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4e5ci"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Well" type="Node2D"]
script = ExtResource("1_r8t8w")

[node name="MerchantVariables" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_0sk10")

[node name="MerchantImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_msfa7")

[node name="BorderImage" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_36flg")

[node name="MerchantUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -73.0
offset_top = -90.0
offset_right = 73.0
offset_bottom = 90.0

[node name="PopupPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
size = Vector2i(21, 44)
theme_override_styles/panel = SubResource("StyleBoxFlat_4e5ci")

[node name="TooltipContainer" type="VBoxContainer" parent="PopupPanel"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="MerchantUI" to="." method="_on_merchant_ui_mouse_entered"]
[connection signal="mouse_exited" from="MerchantUI" to="." method="_on_merchant_ui_mouse_exited"]
